# weedingRobot

./: README.md  runRobot.sh
launch/: launchRobot.py
src/AI/: package.xml  setup.cfg  setup.py
src/AI/AI/: img_send.py
src/ai/: package.xml  setup.py
src/ai/ai/: img_send.py
src/burn/: package.xml  setup.cfg  setup.py
src/burn/burn/: burn_transcribe.py
src/coordinate_sender/: package.xml  setup.cfg  setup.py
src/coordinate_sender/coordinate_sender/: sender.py  sortPoints.py  translatingPixelToPoint.py
src/install/: local_setup.sh  setup.sh
src/install/coordinate_sender/lib/coordinate_sender/: sender
src/install/coordinate_sender/share/coordinate_sender/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/log/: latest_build
src/srvs_and_msgs/: CMakeLists.txt  package.xml
src/srvs_and_msgs/srv/: SetBurnLength.srv
src/stepper_control/: package.xml  setup.cfg  setup.py
src/stepper_control/stepper_control/: transcriber.py
src/wheel_control/: package.xml  setup.py
src/wheel_control/wheel_control/: transcriber.py
